# rusty-vm

./: .gitignore  Cargo.toml  README  README.md  bye file  test.rdbin
runtime/: Cargo.toml  lib.rs
runtime/src/: lib.rs
src/: main.rs  newrt.txt  reader.rs  runtime.rs  runtimee.txt  stringify.rs  test.rs
std/: Cargo.toml  lib.rs
