[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[lib]
name = "runtime"
path = "lib.rs"


[profile.dev]
opt-level = 3
debug = false